<resources>
    <string name="app_name">Messenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Nastya</string>
    <string name="settings_default_status">Online</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+375 (…) xxx-xx-xx</string>
    <string name="settings_label_phone_number">нажмите, чтобы изменить номрер телефона</string>
    <string name="settings_default_login">Не задано</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на Ваш телефон</string>
    <string name="register_hint_default">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phone_hint">_________________________</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_input_bio">bio</string>
</resources>