<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fracments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_bloc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo_set"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/default_photo"
            app:civ_circle_background_color="@color/colorAccent"
            app:civ_border_width="2dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="-2dp" />

        <TextView
            android:id="@+id/settings_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            tools:text="@string/settings_default_username"
            app:layout_constraintStart_toEndOf="@id/user_photo_set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_photo_set"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp" />
        <TextView
            android:id="@+id/settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:text="@string/settings_default_status"
            app:layout_constraintStart_toEndOf="@id/user_photo_set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_full_name"
            android:textSize="14sp"
            android:layout_marginStart="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_bloc"
        android:text="@string/settings_text_account"
        android:layout_marginStart="@dimen/app_margent"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/normalText"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number_phone"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsBottons">

        <TextView
            android:id="@+id/settings_phone_number"
            tools:text="@string/settings_default_number"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_label_phone_number"
            android:text="@string/settings_label_phone_number"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_username"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_number_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsBottons">

        <TextView
            android:id="@+id/settings_username"
            tools:text="@string/settings_default_login"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_username"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_label_username"
            android:text="@string/settings_label_login"
            app:layout_constraintTop_toBottomOf="@id/settings_username"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsBottons">

        <TextView
            android:id="@+id/settings_bio"
            tools:text="@string/settings_default_bio"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_label_bio"
            android:text="@string/settings_label_bio"
            app:layout_constraintTop_toBottomOf="@id/settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:civ_border_color="@color/colorGrey"
        android:src="@drawable/ic_camera"
        android:layout_marginEnd="@dimen/app_margent"
        app:civ_circle_background_color="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/settings_text_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_bloc" />

</androidx.constraintlayout.widget.ConstraintLayout>